# control_vectors_multi

./: .gitignore  HOWTO_activations.md  README.md  introspection_test_repo_results.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: apply_vector.py  capture_activations.py  test_vector.py  train_vector.py  visualize_activations.py
src/control_vectors_multi/: __init__.py  apply.py  compat.py  dataset.py  models.py  test.py  train.py
